// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computes the arrow styles 1`] = `
Object {
  "bottom": "",
  "left": "0",
  "position": "absolute",
  "right": "",
  "top": "0",
  "transform": "translate(10px, 5px)",
}
`;

exports[`computes the popper styles 1`] = `
Object {
  "bottom": "",
  "left": "0",
  "position": "absolute",
  "right": "",
  "top": "0",
  "transform": "translate3d(10px, 5px, 0)",
}
`;

exports[`computes the popper styles 2`] = `
Object {
  "bottom": "",
  "left": "10px",
  "position": "absolute",
  "right": "",
  "top": "5px",
  "transform": "",
}
`;

exports[`computes the popper styles 3`] = `
Object {
  "bottom": "105px",
  "left": "10px",
  "position": "absolute",
  "right": "",
  "top": "",
  "transform": "",
}
`;

exports[`computes the popper styles 4`] = `
Object {
  "bottom": "",
  "left": "",
  "position": "absolute",
  "right": "110px",
  "top": "5px",
  "transform": "",
}
`;
